<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redvelvetcrop">
    
    <RelativeLayout android:id="@+id/description"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:visibility="visible">
    	
    	<ImageView android:id="@+id/rules" 
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:src="@drawable/rules"/>
    	
    	<TextView
    	    android:id="@+id/rulesText"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@id/rules"
    	    android:paddingLeft="10dp"
 			android:paddingBottom="15dp"
    	    android:text="@string/acesrules"
    	    android:textColor="#ffffff"
    	    android:textSize="16sp" />
    	
    	<Button android:id="@+id/startAces"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="@drawable/button"
        	style="@style/button_text"
        	android:text="@string/killerStart"
        	android:layout_below="@id/rulesText"
        	android:layout_centerHorizontal="true"
        	android:onClick="startGame"
        	android:paddingLeft="30dp"
       		android:paddingRight="30dp"/>
	</RelativeLayout>
    
    <RelativeLayout android:id="@+id/gameScreen" 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:visibility="invisible">
        
    <LinearLayout android:id="@+id/linearLayoutDice"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerHorizontal="true"
    	android:paddingBottom="25dp">
    	
    	<ImageView android:id="@+id/imageView1"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight=".30"
    	    android:src="@drawable/diceroll2" />
    
    	<ImageView android:id="@+id/imageView2"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
       		android:layout_weight=".30"
        	android:src="@drawable/diceroll2" />
    
    	<ImageView android:id="@+id/imageView3"
    	   android:layout_width="0dp"
    	   android:layout_height="wrap_content"
    	   android:layout_weight=".30"
    	   android:src="@drawable/diceroll2" />
    </LinearLayout>
    
    <Button android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        style="@style/button_text"
        android:text="@string/roll"
        android:layout_below="@id/linearLayoutDice"
        android:layout_centerHorizontal="true"
        android:onClick="HandleClick"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"/>
    
    <LinearLayout android:id="@+id/linearLayoutCounter"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerHorizontal="true"
    	android:layout_below="@id/button"
    	android:paddingTop="10dp">
    	
    	<ImageView android:id="@+id/counter2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
     
     	<ImageView android:id="@+id/counter1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <ImageView android:id="@+id/event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutCounter"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"/>
    
     </RelativeLayout>

</RelativeLayout>
